src/main/java/org/example/taskmanager/errors/UserPasswordInvalidException.java
package org.example.taskmanager.errors;

public class UserPasswordInvalidException extends RuntimeException{
    public UserPasswordInvalidException(){
        super("User Password Invalid !!");
    }
}
